// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicButton when using different variants renders a default button 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-default"
    label="Click Me"
    theme="default"
    type="button"
  />
</div>
`;

exports[`BasicButton when using different variants renders a ghost button 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-ghost"
    label="Click Me"
    theme="ghost"
    type="button"
  />
</div>
`;

exports[`BasicButton when using different variants renders a secondary button 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-secondary"
    label="Click Me"
    theme="secondary"
    type="button"
  />
</div>
`;

exports[`BasicButton when using icons when button with type default has a leading icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-default"
    label="Click Me"
    theme="default"
    type="button"
  >
    <span
      slot="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;

exports[`BasicButton when using icons when button with type default has a trailing icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-default"
    label="Click Me"
    theme="default"
    type="button"
  >
    <span
      slot="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;

exports[`BasicButton when using icons when button with type ghost has a leading icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-ghost"
    label="Click Me"
    theme="ghost"
    type="button"
  >
    <span
      slot="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;

exports[`BasicButton when using icons when button with type ghost has a trailing icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-ghost"
    label="Click Me"
    theme="ghost"
    type="button"
  >
    <span
      slot="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;

exports[`BasicButton when using icons when button with type secondary has a leading icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-secondary"
    label="Click Me"
    theme="secondary"
    type="button"
  >
    <span
      slot="leadingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;

exports[`BasicButton when using icons when button with type secondary has a trailing icon renders the icon 1`] = `
<div>
  <atlas-basic-button
    htmlid="button-secondary"
    label="Click Me"
    theme="secondary"
    type="button"
  >
    <span
      slot="trailingIcon"
    >
      <i
        class="fa fa-chevron-left"
      />
    </span>
  </atlas-basic-button>
</div>
`;
